--- a/task-03.html
+++ b/task-03.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .gallery {
+        display: flex;
+        gap: 32px;
+      }
+
+      .gallery-img {
+        width: 100%;
+        height: auto;
+        box-shadow: 5px 5px 5px #555555;
+        border-radius: 5px;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
